# opencv_1_Cascade-Classifier

./: README.md  pyproject.toml
src/1_cascade_classifier/: main.py
