[project]
name = "1-cascade-classifier"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleg",email = "oleg.lanovoy@tomalearn.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "1_cascade_classifier", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
